# unas

./: .gitignore  Makefile  README.md  configure
.github/workflows/: ci.yml
companion/: .gitignore  README.md  build-daemon.sh  make-icon.py  package-lock.json  package.json
companion/src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json
companion/src-tauri/capabilities/: default.json
companion/src-tauri/src/: lib.rs  main.rs
companion/ui/: index.html  main.js
examples/: README.md
examples/python/: client.py
examples/typescript/: client.ts  package-lock.json  package.json  tsconfig.json
src/compat/: random.c  random.h
src/core/: fsapi.c  fsapi.h  http.c  http.h  jsonw.c  jsonw.h  net.c  net.h  unasd.c
tests/: check-docs.sh  run.sh
tests/api/: test_http.c  test_jsonw.c  test_pathjail.c
tests/fixtures/: hello.txt  sample.json
